# qosflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  load.final.yaml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
Colab files/: bench_repro.sh  load_1.out  load_2.out  load_3.out  sweep_1.out  sweep_128.out  sweep_16.out  sweep_2.out  sweep_256.out  sweep_32.out  sweep_4.out  sweep_512.out  sweep_64.out  sweep_8.out
Colab files/runs/20260221_040516/: load.out
Colab files/runs/20260221_042614_rate512/: load.out
configs/: example.yaml  load.yaml  server.yaml  sweep.yaml
data/: prompts_sample.jsonl
docs/: architecture.md  experiment_protocol.md  trace_schema.md
qosflow/: __init__.py
qosflow/analysis/: phase.py  sweep.py
qosflow/common/: client.py  config.py  hashing.py  io.py  repro.py  schema.py  telemetry.py
qosflow/loadgen/: mix.py  poisson.py  prompts.py  runner.py
qosflow/metrics/: __init__.py  evaluate.py  latency.py  stability.py  task.py
qosflow/server/: app.py  entrypoint.py  validate.py  vllm_backend.py
scripts/: detect_phase.py  print_config.py  run_eval.py  run_load.py  run_server.py  run_sweep.py  summarize_telemetry.py
tests/: test_client.py  test_loadgen_mix.py  test_loadgen_prompts.py  test_loadgen_runner.py  test_metrics_eval.py  test_phase_detection.py  test_prompt11_minimum.py  test_repro.py  test_server_batching.py  test_smoke.py  test_summarize_telemetry.py
tools/: bench_repro.sh  summarize_runs.py
