[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qosflow"
version = "0.1.0"
description = "vLLM QoS experimentation toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "qosflow contributors" }]
dependencies = [
  "fastapi",
  "uvicorn",
  "vllm",
  "httpx",
  "pydantic",
  "pyyaml",
  "numpy",
  "scipy",
  "pandas",
  "statsmodels",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "black",
  "pre-commit",
]

[tool.setuptools.packages.find]
include = ["qosflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
